# seu-notification

./: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
apps/common/: authentication.py
apps/common/api/: exceptions.py
apps/notifications/: apps.py  models.py
apps/notifications/application/use_cases/: batch_create_notifications.py  create_journey.py  create_notification.py  get_due_stages.py  mark_all_read.py  mark_notification_read.py  mark_read.py  register_device_token.py  send_email.py  send_sms.py  update_preference.py
apps/notifications/domain/: entities.py  exceptions.py  repositories.py
apps/notifications/infrastructure/: acknowledgement_models.py  admin.py  consumer.py  digest_models.py  models.py  publisher.py  repositories.py
apps/notifications/infrastructure/senders/: fcm_sender.py  gmail_sender.py  mailhog_sender.py  sendgrid_sender.py  twilio_sender.py
apps/notifications/management/commands/: consume_notifications.py  process_journeys.py
apps/notifications/migrations/: 0000_create_notifications_schema.py  0001_initial.py  0001_initial_notification_models.py  0002_add_event_journey_stages.py  0003_add_audit_digest_schedule.py  0004_add_event_update_acknowledgement.py
apps/notifications/presentation/: digest_serializers.py  digest_urls.py  digest_views.py  serializers.py  urls.py  views.py
apps/notifications/tests/unit/: fakes.py  test_audit_publisher.py  test_batch_notifications.py  test_create_notification.py  test_digest_models.py  test_digest_serializers.py  test_digest_urls.py  test_digest_views.py  test_event_acknowledgement.py  (+9 more)
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
