[project]
name = "notification-service"
version = "0.1.0"
description = "Notification delivery service for the Sansaar platform."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "cryptography>=42.0.0",
    "psycopg2-binary",
    "django-cors-headers",
    "python-decouple",
    "gunicorn",
    "redis",
    "pika",
    "drf-spectacular",
    "sendgrid",
    "firebase-admin>=6.0",
    "celery[redis]>=5.4",
    "dj-database-url>=2.0.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# test_send_sms.py imports SmsNotification which does not exist yet in domain entities
addopts = "--ignore=apps/notifications/tests/unit/test_send_sms.py"

[tool.ruff]
line-length = 140
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = [
    "arg-type",
    "var-annotated",
    "misc",
    "union-attr",
    "attr-defined",
    "dict-item",
    "operator",
    "assignment",
    "has-type",
    "index",
]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"
